final.css
/*BEGIN Xbox One Controller Styling*/
.controller.xbox {
    background: url(basemod2.png);
    height: 406px;
    width: 556px;
    background-size: 556px 406px;
    /*    margin-left: -375px;
        margin-top: -285px;*/
}

.xbox.white {
    background: url(xbox-assets/base-white.svg);
}

.xbox.disconnected {
    background: url(xbox-assets/disconnected.svg);
}

.xbox.disconnected div {
    display: none;
}

.xbox .triggers {
    width: 330px;
    height: 80px;
    position: absolute;
    
    left: 113px;
}

.xbox .trigger {
    width: 65px;
    height: 80px;
    background: url(trigger.svg);
    opacity: 0;
}

.xbox .trigger.pressed {
    opacity: 1;
}

.xbox .trigger.left {
    float: left;
    background-position: 0 0;
}

.xbox .trigger.right {
    float: right;
    transform: rotateY(180deg);
}

.xbox .bumper {
    width: 126px;
    height: 40px;
    background: url(bumper.svg);
    opacity: 0;
}

.xbox .bumpers {
    position: absolute;
    width: 397px;
    height: 40px;
    left: 79px;
    top: 83px;
}

.xbox .bumper.pressed {
    opacity: 1;
}

.xbox .bumper.left {
    float: left;
}

.xbox .bumper.right {
    float: right;
    -webkit-transform: rotateY(180deg);
    transform: rotateY(180deg);
}


.xbox .p0 {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
}

.xbox .p1 {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
}

.xbox .p2 {
    -webkit-transform: rotate(270deg);
    transform: rotate(270deg);
}

.xbox .p3 {
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
}

.xbox .arrows {
    position: absolute;
    width: 104px;
    height: 25px;
    top: 170px;
    left: 227px;
}

.xbox .back, .xbox .start {
    background: url(start-select.svg);
    width: 33px;
    height: 33px;
    opacity: 0;
}

.xbox .back.pressed, .xbox .start.pressed {
    opacity: 1;
}

.xbox .back {
    float: left;
}

.xbox .start {
    background-position: 33px 0px;
    float: right;
}

.xbox .abxy {
    position: absolute;
    width: 113px;
    height: 100px;
    top: 0px;
    left: 445px;
}

.xbox .button {
    position: absolute;
    background: url(abxy.svg);
    width: 36px;
    height: 36px;
}

.xbox .button.pressed {
    background-position-y: -36px;
    margin-top: 3px;
    opacity: 1;
}

.xbox .a {
    background-position: 0 0;
    top: 68px;
    left: 42px;
}

.xbox .a.pressed {
    background-color: rgba(0, 255, 0, 0.5);
}

.xbox .b {
    background-position: -37px 0;  
    top: 34px;
    right: 0px;
}

.xbox .b.pressed {
    background-color: rgba(255, 0, 0, 0.5);
}

.xbox .x {
    background-position: -74px 0;
    top: 34px;
    left: 4px;
}

.xbox .x.pressed {
    background-color: rgba(0, 100, 255, 0.5);
}

.xbox .y {
    background-position: 36px 0;
    left: 42px;
    top: 0px;
}

.xbox .y.pressed {
    background-color: rgba(255, 255, 0, 0.5);
}

.xbox .sticks {
    position: absolute;
    width: 275px;
    height: 126px;
    top: 154px;
    left: 107px;
}

.xbox .stick {
    position: absolute;
    background: url(stick.svg);
    background-position: -62px 0;
    height: 62px;
    width: 62px;
}

.xbox .stick.pressed {
    background-position: 0 0;
}

.xbox .stick.left {
    top: 0;
    left: 0;
}

.xbox .stick.right {
    top: 73px;
    left: 213px;
}

.xbox .dpad {
    position: absolute;
    width: 82px;
    height: 71px;
    top: 222px;
    left: 165px;
}

.xbox .face {
    background: url(dpad.svg);
    position: absolute;
    opacity: 0;
}

.xbox .face.pressed {
    opacity: 1;
}

.xbox .face.up {
    background-position: 34px 0;
    left: 38px;
    top: 0px;
    width: 34px;
    height: 56px;
}

.xbox .face.down {
    left: 38px;
    bottom: 0;
    width: 34px;
    height: 56px;
}

.xbox .face.left {
    background-position: 0 -93px;
    width: 55px;
    height: 35px;
    top: 38px;
    left: 0;
}

.xbox .face.right {
    background-position: 0 -57px;
    width: 55px;
    height: 35px;
    top: 38px;
    right: 0;
}

.xbox.half {
    margin-top: -315px;
}

.xbox {
    background: no-repeat center;
}

/* Razer M1-M6 Paddle Buttons */
.xbox .paddle {
    position: absolute;
    width: 30px;
    height: 30px;
    border: 2px solid rgba(255, 255, 255, 0.3);
    border-radius: 50%;
    opacity: 0.3;
}

.xbox .paddle.pressed {
    opacity: 1;
    background-color: rgba(255, 255, 255, 0.8);
}

.xbox .m1 {
    top: 20px;
    left: 50px;
}

.xbox .m2 {
    top: 20px;
    right: 50px;
}

.xbox .m3 {
    top: 80px;
    left: 30px;
}

.xbox .m4 {
    top: 80px;
    right: 30px;
}

.xbox .m5 {
    top: 140px;
    left: 20px;
}

.xbox .m6 {
    top: 140px;
    right: 20px;
}

/*END Xbox One Controller Styling*/

